<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/toolbar"
    android:background="@color/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:padding="10dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_centerVertical="true"
            android:contentDescription="@string/custom_toolbar_back_btn_description"
            android:background="?selectableItemBackgroundBorderless"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_toolbar_title"
            android:gravity="center"
            android:textColor="@color/whiteTwo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:id="@+id/toolbar_title" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_toolbar_clear"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackground"
            android:textStyle="bold"
            android:textColor="@color/whiteTwo"
            android:visibility="gone"/>

    </RelativeLayout>

</android.support.v7.widget.Toolbar>